<resources>
    <string name="app_name">SafwanShaibN01343815</string>
    <string name="safwan">Safwan</string>
    <string name="help">Help</string>
    <string name="pizza">Pizza</string>
    <string name="help_link">https://food.ndtv.com/food-drinks/an-ultimate-guide-on-how-to-order-a-pizza-1905628</string>
    <string name="safwan_menu_item">To implement later</string>
    <string name="title_activity_my_info">MyInfoActivity</string>
    <string name="phone_number">tel:(437)388-2002</string>

    <string name="myInfo">
        Safwan Shaib\n
        N01343815\n
        Computer Engineering Tech\n
        Humber College\n
        Email: sh5safwan@hotmail.com
    </string>
    <string-array name="pizza_stores">
        <item name="pizza_hut"> Pizza Hut </item>
        <item name="pizza_nova">Pizza Nova</item>
        <item name="domino_s_pizza">Domino\'s Pizza</item>
        <item name="pizza_pizza">Pizza Pizza</item>
    </string-array>
    <string name="next">Next</string>
    <string name="validateSelection1">Please make a selection</string>
    <string name="selectionToast1">Pizza Hut store is selected</string>
    <string name="selectionToast2">Pizza Nova store selected</string>
    <string name="selectionToast3">Dominos store selected</string>
    <string name="selectionToast4">Pizza Pizza store selected</string>
    <string name="alertMsg1">Not hungry?</string>
    <string name="alertMsg2">Click yes to exit this app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="storeSelection">selected store</string>
    <string name="storeImage">store image</string>
    <string name="sbtext1">Move to payment?</string>
    <string name="sbyes">Yes</string>
    <string name="mushroom">Mushroom</string>
    <string name="sausage">Sausage</string>
    <string name="onion">Onion</string>
    <string name="green_pepper">Green pepper</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="extra_cheese">Extra cheese</string>
    <string name="select_the_type">Select the type:</string>
    <string name="veggie">Veggie</string>
    <string name="cheese">Cheese</string>
    <string name="meat">Meat</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="x_large">X Large</string>
    <string name="select_the_size">Select the size:</string>
    <string name="select_toppings">Select toppings:</string>
    <string name="previous1">Previous</string>
    <string name="previous2">Previous</string>
    <string name="validateSelection2">Please select type and size</string>
    <string name="validateSelection3">Please select at least one topping</string>
    <string name="user_name">Type your name</string>
    <string name="user_email">example@domain.com</string>
    <string name="user_phone">Ex: 437 388 2002</string>
    <string name="user_address">Postal Code</string>
    <string name="user_creditCard">Credit card number</string>
    <string name="pin_number">Three digits pin</string>
    <string name="order">Order</string>
    <string name="credit_exp">Four digits expiration date</string>
    <string name="validate_name">Name is required</string>
    <string name="validate_address">Address is required</string>
    <string name="validate_card">Credit Card info is required</string>
    <string name="validate_pin">Pin is required</string>
    <string name="validate_expDate">Expiration date is required</string>
    <string name="validate_contactInfo">Either Email address or phone number is required</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="send_name">send_name</string>
    <string name="send_email">send_email</string>
    <string name="send_phone">send_phone</string>
    <string name="send_address">send_address</string>
    <string name="send_card">send_card</string>
    <string name="send_pin">send_pin</string>
    <string name="send_expiry">send_expiry</string>
    <string name="is_delivery">isDelivery</string>
    <string name="delivery_msg">DELIVERY: Will be delivered to your home</string>
    <string name="pickup_msg">PICKUP: We are happy to serve your in store</string>
</resources>